--- a/Form application backend/backend/src/main/resources/application.properties
+++ b/Form application backend/backend/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.application.name=backend
 
-# Use H2 in-memory database
+# In?memory H2
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Let Hibernate create/update tables automatically
+# Auto DDL
 spring.jpa.hibernate.ddl-auto=update
 
-# (Optional) Enable the H2 web console at /h2-console
+# Always run data.sql
+spring.sql.init.mode=always
+
+# H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Dev: show SQL
 spring.jpa.show-sql=true
