--- a/Form application backend/backend/build.gradle
+++ b/Form application backend/backend/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2'
 
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
