--- a/Form application backend/backend/src/main/resources/application.properties
+++ b/Form application backend/backend/src/main/resources/application.properties
@@ -1,12 +1,26 @@
+# backend/src/main/resources/application.properties
+
 # JWT Configuration
+# The JWT secret is loaded from an environment variable named 'JWT_SECRET'.
+# This ensures it is not hardcoded in your repository.
+# Ensure this environment variable is set when running the backend.
 
 backend.app.jwtExpirationMs=86400000
 
-# H2 Console Configuration (ensure these are present if you use H2)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# MySQL Database Configuration
+# Database URL, username, and password are loaded from environment variables.
+spring.datasource.url=jdbc:mysql://localhost:3306/FullStackApplicationVer0?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+# 'update' will create tables if they don't exist and update schema if entities change.
+# For production, consider 'validate' or 'none' after initial setup.
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Disable H2 Console (as you're no longer using H2)
+# Ensure no other H2-related properties are present.
+# spring.h2.console.enabled=false
