--- a/Form application backend/backend/src/main/resources/application.properties
+++ b/Form application backend/backend/src/main/resources/application.properties
@@ -1,26 +1,24 @@
 # backend/src/main/resources/application.properties
 
 # JWT Configuration
-# The JWT secret is loaded from an environment variable named 'JWT_SECRET'.
-# This ensures it is not hardcoded in your repository.
-# Ensure this environment variable is set when running the backend.
-
 backend.app.jwtExpirationMs=86400000
+# 24 hours (in milliseconds)
 
 # MySQL Database Configuration
-# Database URL, username, and password are loaded from environment variables.
 spring.datasource.url=jdbc:mysql://localhost:3306/FullStackApplicationVer0?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
-# 'update' will create tables if they don't exist and update schema if entities change.
-# For production, consider 'validate' or 'none' after initial setup.
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql= true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# OpenAI Chatbot Configuration
+backend.openai.api-key=${OPENAI_API_KEY}
+backend.openai.api-url=https://api.openai.com/v1/chat/completions
+backend.openai.model=gpt-3.5-turbo # Default OpenAI model to use (e.g., gpt-3.5-turbo, gpt-4)
+
 # Disable H2 Console (as you're no longer using H2)
-# Ensure no other H2-related properties are present.
 # spring.h2.console.enabled=false
