small changes in ai assistant ui

--- a/Form application backend/backend/src/main/resources/application.properties
+++ b/Form application backend/backend/src/main/resources/application.properties
@@ -10,15 +10,13 @@ spring.datasource.username=root
 spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.open-in-view=false
+
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# OpenAI Chatbot Configuration
-backend.openai.api-key=${OPENAI_API_KEY}
-backend.openai.api-url=https://api.openai.com/v1/chat/completions
-backend.openai.model=gpt-3.5-turbo # Default OpenAI model to use (e.g., gpt-3.5-turbo, gpt-4)
 
-# Disable H2 Console (as you're no longer using H2)
-# spring.h2.console.enabled=false
+
+
