--- a/Form application backend/backend/src/main/resources/application.properties
+++ b/Form application backend/backend/src/main/resources/application.properties
@@ -15,10 +15,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# OpenAI Chatbot Configuration
-backend.openai.api-key=${OPENAI_API_KEY}
-backend.openai.api-url=https://api.openai.com/v1/chat/completions
-backend.openai.model=gpt-3.5-turbo # Default OpenAI model to use (e.g., gpt-3.5-turbo, gpt-4)
+# Pagination Configuration
+spring.data.web.pageable.default-page-size=5
+spring.data.web.pageable.max-page-size=20
+spring.data.web.pageable.one-indexed-parameters=false
+
+# Enable sorting parameters
+spring.data.web.sort.sort-parameter=sort
 
 # Disable H2 Console (as you're no longer using H2)
 # spring.h2.console.enabled=false
