--- a/Form application backend/backend/build.gradle
+++ b/Form application backend/backend/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 
     // NEW: Dependency for loading .env files
     implementation 'io.github.cdimascio:dotenv-java:2.3.2' // Or the latest version
+
+    //Data scraping
+    implementation 'org.jsoup:jsoup:1.15.3'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
 tasks.named('test') {
